Workflow does not contain permissions #2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: Deploy Lambda Layer
 permissions:
-  contents: read
-  pull-requests: write
-
-permissions:
-  contents: read
+  contents: write
   pull-requests: write
 
 on:
